# dxpool

./: .gitignore  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  clang-tidy.config  classes.html  dir_151f83e179fc7933697ae41c9001da66.html  dir_151f83e179fc7933697ae41c9001da66.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dxpool.code-workspace  dxpool.h  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  (+23 more)
.github/workflows/: build_linux.yml  fuzz_tests.yml  publish_docs.yml
benchmark/: CMakeLists.txt  PoolBench.cpp
ci-scripts/: build_and_test.sh  build_and_test_simplepool.sh
d0/d46/: WorkQueue_8h_source.html
d0/d9f/: classdxpool_1_1PoolItem.html  classdxpool_1_1PoolItem.js
d0/da8/: classdxpool_1_1ProcessorOperator__inherit__graph.map  classdxpool_1_1ProcessorOperator__inherit__graph.md5
d0/dc0/: MutexIndexer_8h_source.html
d1/d90/: classdxpool_1_1Core-members.html
d1/dde/: classdxpool_1_1PoolItem-members.html
d2/d33/: classdxpool_1_1WorkerPool-members.html  structMemPool.html  structMemPool.js
d2/d53/: classdxpool_1_1NUMANode.html  classdxpool_1_1NUMANode.js
d2/dbc/: classdxpool_1_1ProcessorOperator-members.html
d2/dc1/: md_CONTRIBUTING.html
d2/def/: classdxpool_1_1ConcurrentIndexer-members.html
d3/d5c/: md_CODE_OF_CONDUCT.html
d3/d7d/: NUMANode_8h_source.html
d3/dbf/: classdxpool_1_1ProcessorLinux__coll__graph.map
d6/dd7/: Core_8h_source.html
examples/: CMakeLists.txt  DataPoolApp.cpp  WorkerPoolApp.cpp
fuzz/: CMakeLists.txt  ConcurrentIndexerFuzzTest.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+6 more)
simple_pool/: .clang-format  CMakeLists.txt  dyn_mem_pool.h  dyn_mem_pool_fuzz.c  dyn_mem_pool_test.c
src/: ConcurrentIndexer.h  Core.h  IndexHolder.h  MutexIndexer.h  NUMANode.h  Optimizers.h  Pool.h  PoolItem.h  Processor.h  ProcessorLinux.h  ProcessorOperator.h  ProcessorUnsupported.h  TypePolicies.h  WorkQueue.h  WorkerPool.h  dxpool.cpp  dxpool.h
test/: AllIndexerTest.cpp  CMakeLists.txt  CoreTest.cpp  IndexHolderTest.cpp  IndexerTemplateTest.h  NUMANodeTest.cpp  PoolItemTest.cpp  PoolTest.cpp  ProcessorTest.cpp  TestTypes.h  WorkQueueTest.cpp  WorkerPoolTest.cpp
(+57 files in other folders)
